--- a/Install.txt
+++ b/Install.txt
@@ -24,7 +24,7 @@ See License.txt for more information.
 Pyro Paint was written as a simple experiment.  Commits from initial developer
 may be limited.  Please clone http://www.github.com/Altazon/PyroPaint/ for updates.
 
-Contact:  Eric Sund; epsund@tormail.org
+Contact:  Eric Sund; epsund@e2esolution.com
 
 
 --- INSTALLATION INSTRUCTIONS FOR PYRO PAINT ---
@@ -55,4 +55,4 @@ Contact:  Eric Sund; epsund@tormail.org
 
 Enjoy!
 
-If you have any issues or questions with installation, email epsund@tormail.org for assitance.
+If you have any issues or questions with installation, email epsund@e2esolution.org for assitance.
