--- a/Install.txt
+++ b/Install.txt
@@ -1,7 +1,7 @@
 --- Pyro Paint v1.0 ---
 
 Pyro Paint is a minimalistic graphical drawing program originally started by Eric Sund
-Copyright (C) 2013  Eric Sund
+Copyright (C) 2016  Eric Sund
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
@@ -24,7 +24,7 @@ See License.txt for more information.
 Pyro Paint was written as a simple experiment.  Commits from initial developer
 may be limited.  Please clone http://www.github.com/Altazon/PyroPaint/ for updates.
 
-Contact:  Eric Sund; ericsund@ericsund.tk
+Contact:  Eric Sund; epsund@gmail.com
 
 
 --- INSTALLATION INSTRUCTIONS FOR PYRO PAINT ---
